--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 <body>
     <ion-app>
         <ion-header>
-            <ion-toolbar>
-                
+            <ion-toolbar color="primary">
+                <ion-title> Fang Finances</ion-title>
             </ion-toolbar>
         </ion-header>
         <ion-content>
-
+            <ion-item>
+                <ion-label position="floating">Expense Reason</ion-label>
+                <ion-input type="text"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label position="floating">Expense Amount</ion-label>
+                <ion-input type="number"></ion-input>
+            </ion-item>
         </ion-content>
     </ion-app>
 </body>
